--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -221,7 +221,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CFLAGS = -g -O2 -funroll-loops
+AM_CFLAGS = -funroll-loops
 AM_CPPFLAGS = -I$(top_srcdir)/src/include
 lib_LTLIBRARIES = libcint.la
 libcint_la_LDFLAGS = -version-info 1:0:0
