--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -221,10 +221,10 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CFLAGS = -funroll-all-loops
+AM_CFLAGS = -DNDEBUG -funroll-all-loops
 AM_CPPFLAGS = -I$(top_srcdir)/src/include
 lib_LTLIBRARIES = libcint.la
-libcint_la_LDFLAGS = -release 1.1.2
+libcint_la_LDFLAGS = -release 1.2
 libcint_la_LIBADD = $(BLAS_LIBS) $(LIBS)
 libcint_la_SOURCES = c2f.c \
 		     cart2sph.c \
