--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -226,7 +226,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CPPFLAGS = -I$(top_srcdir)/src/include
+AM_CPPFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/include
 AM_LDFLAGS = -L../src -lcint
 time_c2h6_SOURCES = time_c2h6.c
 time_c60_SOURCES = time_c2h6.c
