remove unused code

--- a/Makefile.in
+++ b/Makefile.in
@@ -348,7 +348,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = src testsuite examples #scripts doc
+SUBDIRS = src examples #scripts doc
 include_HEADERS = $(top_srcdir)/include/cint.h
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
