--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,6 @@ ACLOCAL_AMFLAGS = -I m4
 
 AUTOMAKE_OPTIONS = foreign
 
-SUBDIRS = src testsuite examples #scripts doc
+SUBDIRS = src examples #scripts doc
 
 include_HEADERS = $(top_srcdir)/include/cint.h
