add static library building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,15 @@ include_directories(
   ${PROJECT_SOURCE_DIR}/include
   ${PROJECT_SOURCE_DIR}/src)
 
-add_library(cint SHARED 
+set(cintSrc 
   src/c2f.c src/cart2sph.c src/cint1e.c src/cint2e.c src/cint_bas.c
   src/fblas.c src/g1e.c src/g2e.c src/misc.c src/optimizer.c
   src/rys_roots.c
   src/autocode/auto_intor1.c src/autocode/auto_intor2.c
   src/autocode/auto_intor3.c src/autocode/gaunt1.c src/autocode/grad1.c
   src/autocode/grad2.c src/autocode/grad3.c)
+
+add_library(cint SHARED ${cintSrc})
 
 set_target_properties(cint PROPERTIES
   VERSION ${cint_VERSION}
@@ -40,4 +42,12 @@ if (PYTHONINTERP_FOUND)
   enable_testing()
   add_test(NAME cinttest
     COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testsuite/test_cint.py)
+endif()
+
+if (${ENABLE_STATIC})
+  add_library(cintStatic STATIC ${cintSrc})
+  set_target_properties(cintStatic PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}
+    OUTPUT_NAME cint)
+  install(TARGETS cintStatic DESTINATION lib)
 endif()
