Do not compile examples by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 project (cint)
-set(cint_VERSION "2.1.0")
+set(cint_VERSION "2.1.1")
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -funroll-loops -ftree-vectorize")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG -ffast-math -fno-strict-overflow -fomit-frame-pointer")
@@ -8,7 +8,7 @@ set(CMAKE_VERBOSE_MAKEFILE OFF)
 
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-enable_language(Fortran)
+#enable_language(Fortran)
 find_package(BLAS REQUIRED)
 
 include_directories(
@@ -46,8 +46,7 @@ else()
   install(TARGETS cint DESTINATION lib)
   install(FILES ${PROJECT_SOURCE_DIR}/include/cint.h DESTINATION include)
 
-  if (${DISABLE_EXAMPLE})
-  else()
+  if (${ENABLE_EXAMPLE})
     add_subdirectory(examples)
 
     find_package(PythonInterp)
