Cartesian to spherical transformation for l=12

--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -70,7 +70,7 @@
 #define TSRZZ       8
 
 // some other boundaries
-#define ANG_MAX         8 // l = 0..7
+#define ANG_MAX         15 // l = 0..7 .. 14
 #define POINT_NUC       1
 #define GAUSSIAN_NUC    2
 
