--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,10 @@ set(cintSrc
   src/cint2c2e.c src/g2c2e.c src/cint3c2e.c src/g3c2e.c src/optimizer_3c2e.c 
   src/cint3c1e.c src/g3c1e.c
   src/autocode/auto_intor1.c src/autocode/auto_intor2.c
-  src/autocode/auto_intor3.c src/autocode/gaunt1.c src/autocode/grad1.c
+  src/autocode/auto_intor3.c src/autocode/grad1.c
   src/autocode/grad2.c src/autocode/grad3.c src/autocode/auto_hess.c
-  src/autocode/auto_3c2e.c src/autocode/auto_3c1e.c)
+  src/autocode/auto_3c2e.c src/autocode/auto_3c1e.c
+  src/autocode/gaunt1.c src/autocode/breit1.c)
 
 
 if (${ENABLE_STATIC})
