--- a/include/cint.h.in
+++ b/include/cint.h.in
@@ -18,6 +18,8 @@
 #define PTR_COMMON_ORIG 1
 #define PTR_RINV_ORIG   4
 #define PTR_RINV_ZETA   7
+// omega parameter in range-separated coulomb operator
+#define PTR_RANGE_OMEGA 8
 #define PTR_ENV_START   20
 
 // slots of atm
@@ -78,7 +80,7 @@
 #define TSRZZ       8
 
 // some other boundaries
-#define ANG_MAX         15 // l = 0..7 .. 14
+#define ANG_MAX         12 // l = 0..11
 #define POINT_NUC       1
 #define GAUSSIAN_NUC    2
 
