Fix default cmake install path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ set(CMAKE_VERBOSE_MAKEFILE OFF)
 
 if (${CMAKE_VERSION} GREATER 2.8.5)
   include(GNUInstallDirs)
+else (${CMAKE_VERSION} GREATER 2.8.5)
+  set(CMAKE_INSTALL_LIBDIR lib)
+  set(CMAKE_INSTALL_INCLUDEDIR include)
 endif (${CMAKE_VERSION} GREATER 2.8.5)
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
