Fix cmake version check error in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,15 @@ set(cint_VERSION "2.8")
 set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
-if (${CMAKE_VERSION} GREATER 2.8.5)
+if (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.8)
   include(GNUInstallDirs)
-else (${CMAKE_VERSION} GREATER 2.8.5)
-  set(CMAKE_INSTALL_LIBDIR lib)
-  set(CMAKE_INSTALL_INCLUDEDIR include)
-endif (${CMAKE_VERSION} GREATER 2.8.5)
+elseif (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} EQUAL 2.8 AND
+    ${CMAKE_PATCH_VERSION} GREATER 4)
+  include(GNUInstallDirs)
+else ()
+  set(CMAKE_INSTALL_LIBDIR lib CACHE PATH "lib")
+  set(CMAKE_INSTALL_INCLUDEDIR include CACHE PATH "include")
+endif (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.8)
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(BLAS REQUIRED)
