--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,10 @@ script:
 - export CMAKE_CXX_COMPILER=$CXX
 - export CMAKE_C_FLAGS="-O3 -fopenmp"
 - export CMAKE_CXX_FLAGS="-O3 -fopenmp"
-- echo "if the following fails, use `cmake --debug-output ..` instead"
+- echo 'if the following fails, use `cmake --debug-output ..` instead'
 - cmake .. -DQUICK_TEST=1
 - make
-- echo "cannot do `make test` right now"
+- echo 'cannot do `make test` right now'
 after_failure:
 - echo "FAILURE"
 - find . -name CMakeOutput.log -exec cat {} ";"
